@@ -2,25 +2,24 @@ package com.example.demo.controller;
 
 import com.example.demo.constants.ErrorMessage;
 import com.example.demo.constants.ValidationMessage;
-import com.example.demo.exceptions.EncryptionException;
+import com.example.demo.entity.Student;
+import com.example.demo.exceptions.DecryptionException;
 import com.example.demo.entity.User;
+import com.example.demo.repository.StudentRepository;
 import com.example.demo.repository.UserRepository;
 import com.example.demo.request.UpdateProfileRequest;
 import com.example.demo.response.JwtResponse;
 import com.example.demo.service.UserDetailsImpl;
 import com.example.demo.service.UserDetailsServiceImpl;
 import com.example.demo.util.JwtUtil;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import static com.example.demo.util.AESUtil.encrypt;
+import static com.example.demo.util.AESUtil.decrypt;
 
 @RestController
 @RequestMapping("/api/user")
@@ -28,17 +27,20 @@ public class UserDataController {
     private final JwtUtil jwtUtil;
     private final UserDetailsServiceImpl userDetailsService;
     private final UserRepository userRepository;
-    private static final Logger loggerUserDataController = LoggerFactory.getLogger(UserDataController.class);
+    private final StudentRepository studentRepository;
+
 
     @Autowired
     public UserDataController(
             JwtUtil jwtUtil,
             UserDetailsServiceImpl userDetailsService,
-            UserRepository userRepository
+            UserRepository userRepository,
+            StudentRepository studentRepository
     ){
         this.jwtUtil = jwtUtil;
         this.userDetailsService = userDetailsService;
         this.userRepository = userRepository;
+        this.studentRepository = studentRepository;
     }
 
     @GetMapping("/profile")
@@ -51,7 +53,7 @@ public class UserDataController {
             UserDetailsImpl userDetails = (UserDetailsImpl) userDetailsService.loadUserByUsername(registrationNumber);
             List<String> roles = userDetails.getAuthorities().stream()
                     .map(item -> item.getAuthority())
-                    .collect(Collectors.toList());
+                    .toList();
 
             JwtResponse response = new JwtResponse(token, userDetails.getUsername(), userDetails.getFirstName(), userDetails.getLastName(), userDetails.getEmail(), userDetails.getCnp(), userDetails.getDateOfBirth(), userDetails.getUniversity(), userDetails.getFaculty(), roles);
             return ResponseEntity.ok(response);
@@ -61,28 +63,12 @@ public class UserDataController {
     }
 
     @PostMapping("/update")
-    public ResponseEntity<JwtResponse> updateUserProfile(@RequestBody UpdateProfileRequest updateRequest, @RequestHeader("Authorization") String headerAuth){
+    public ResponseEntity<JwtResponse> updateUserProfile(@RequestBody UpdateProfileRequest updateRequest, @RequestHeader("Authorization") String headerAuth) throws DecryptionException {
         String token = headerAuth.substring(7);
         if(jwtUtil.validateJwtToken(token)){
-            User currentUser;
+
             String registrationNumber = jwtUtil.getRegistrationNumberFromJwtToken(token);
-            String tempKey = encryptException(registrationNumber);
-            Optional<User> userStudent = userRepository.findByRegNumber(registrationNumber);
-            Optional<User> userCrypt = userRepository.findByRegNumber(tempKey);
-            boolean isAdmin = false;
-
-            if(userStudent.isEmpty() && userCrypt.isEmpty())
-            {
-                return ResponseEntity.status(404).body(new JwtResponse(ErrorMessage.NON_EXISTENT_USER));
-            }
-
-            if(userCrypt.isPresent())
-                isAdmin = true;
-
-            if(isAdmin)
-                currentUser = userCrypt.get();
-            else
-                currentUser = userStudent.get();
+            User currentUser = findUserByDecryptedAuthKey(registrationNumber);
             currentUser.setCnp(updateRequest.getCnp());
             currentUser.setFaculty(updateRequest.getFaculty());
             currentUser.setUniversity(updateRequest.getUniversity());
@@ -110,12 +96,29 @@ public class UserDataController {
         return ResponseEntity.status(404).body(new JwtResponse(ErrorMessage.NON_EXISTENT_USER));
 
     }
-    private static String encryptException(String input){
-        try{
-            return encrypt(input);
-        } catch (EncryptionException e) {
-            loggerUserDataController.error(e.getMessage());
-            return "";
+
+    public User findUserByDecryptedAuthKey(String decryptedAuthKey) throws DecryptionException {
+        for(User user : userRepository.findAll()){
+            if(findStudent(user.getRegNumber())){
+                if(user.getRegNumber().equals(decryptedAuthKey))
+                    return user;
+            }
+            else{
+
+                String decrypted = decrypt(user.getRegNumber());
+                if(decrypted.equals(decryptedAuthKey))
+                    return user;
+            }
         }
+        return null;
     }
+
+    private boolean findStudent(String decryptAuthKey){
+        for(Student student : studentRepository.findAll()){
+            if(student.getRegNumber().equals(decryptAuthKey))
+                return true;
+        }
+        return false;
+    }
+
 }
